--- a/Coukkas.Api/Coukkas.Api.csproj
+++ b/Coukkas.Api/Coukkas.Api.csproj
@@ -6,6 +6,8 @@
     <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AutoFac" Version="4.6.1" />
+    <PackageReference Include="AutoFac.Extensions.DependencyInjection" Version="4.2.0" />
     <PackageReference Include="AutoMapper" Version="6.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.0.0" />
