create local SQL database (using Entity Framework and Docker's container)

--- a/Coukkas.Api/appsettings.json
+++ b/Coukkas.Api/appsettings.json
@@ -16,5 +16,12 @@
       "Issuer": "http://localhost:5000",
       "SigningKey": "dupqqqqqhjdA@@90",
       "ExpiryMinutes": 120
+      },
+
+      "SqlConnecting": {
+        "ConnectionString": "Server=localhost; User Id=sa;Password=P@$$w0rd;Database=CoukkasDatabase",
+        "InMemory": "false"
       }
+
+      
 }
