automatically changing coukkas locations method

--- a/Coukkas.Api/appsettings.json
+++ b/Coukkas.Api/appsettings.json
@@ -19,7 +19,7 @@
       },
 
       "SqlConnecting": {
-        "ConnectionString": "Server=localhost; User Id=sa;Password=P@$$w0rd;Database=CoukkasDatabase",
+        "ConnectionString": "Server=MATEUSZ-PC; User Id=Mateusz1;Password=mateusz1;Database=dydaktyka",
         "InMemory": "false"
       }
 
