--- a/Coukkas.Api/appsettings.json
+++ b/Coukkas.Api/appsettings.json
@@ -19,7 +19,7 @@
       },
 
       "SqlConnecting": {
-        "ConnectionString": "Server=MATEUSZ-PC; User Id=Mateusz1;Password=mateusz1;Database=dydaktyka",
+        "ConnectionString": "Server=localhost; User Id=sa;Password=SQLServerP@ssw0rd1;Database=CoukkasDatabase",
         "InMemory": "false"
       }
 
